my-test/testsuite_scan/ir/SingleSource/UnitTests/Integer/override.ll.err
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Integer/override.cpp:16:29: warning: unknown attribute 'bitwidth' ignored [-Wunknown-attributes]
   16 | typedef int __attribute__ ((bitwidth(31))) int31;
      |                             ^~~~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Integer/override.cpp:17:29: warning: unknown attribute 'bitwidth' ignored [-Wunknown-attributes]
   17 | typedef int __attribute__ ((bitwidth(32))) int32;
      |                             ^~~~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Integer/override.cpp:24:6: error: redefinition of 'func'
   24 | void func(int31 s)
      |      ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Integer/override.cpp:19:6: note: previous definition is here
   19 | void func(int32 i)
      |      ^
2 warnings and 1 error generated.
